# src/main/java/com/rupesh/ems/api/team/req/CreateTeamRequest.java
@@ -1,13 +1,10 @@
 package com.rupesh.ems.api.team.req;
 
-import jakarta.validation.constraints.Min;
 import jakarta.validation.constraints.NotBlank;
 
 public class CreateTeamRequest {
   @NotBlank private String name;
 
-  @Min(1)
-  private Integer maxMembers = 1;
 
   public CreateTeamRequest(String name) {
     this.name = name;
@@ -15,16 +12,11 @@ public class CreateTeamRequest {
 
   public CreateTeamRequest(String name, Integer maxMembers) {
     this.name = name;
-    this.maxMembers = maxMembers;
   }
 
   public CreateTeamRequest() {}
 
   public String getName() {
     return name;
-  }
-
-  public Integer getMaxMembers() {
-    return maxMembers;
   }
 }
